--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,8 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -87,4 +87,7 @@ dependencies {
 
     //안드로이드12 추가된 스플래쉬 이슈 관련 api
     implementation "androidx.core:core-splashscreen:1.0.0-beta02"
+
+    //state flow 생명주기 관련 api
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc01"
 }
