재료 화면 페이징3 옵저버 관련 수정 진행중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CookingAssistance">
         <activity
+            android:name=".view.storage_material_setting.StorageMaterialSettingActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.test.TestActivity"
             android:exported="false" />
         <activity
