--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,9 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
@@ -79,11 +79,14 @@ dependencies {
     implementation "androidx.paging:paging-rxjava2-ktx:3.1.1"
 
     //의존성주입 HILT
-    implementation "com.google.dagger:hilt-android:2.40.5"
-    kapt "com.google.dagger:hilt-compiler:2.40.5"
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    implementation "com.google.dagger:hilt-android:2.41"
+    kapt "com.google.dagger:hilt-compiler:2.41"
+    kapt 'com.google.dagger:dagger-compiler:2.41'
+//    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0'
+
+
 
     //안드로이드12 추가된 스플래쉬 이슈 관련 api
     implementation "androidx.core:core-splashscreen:1.0.0-beta02"
