--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,17 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.41"
     }
+
+    ext {
+        compose_version = '1.1.1'
+        kotlin_version = '1.6.10'
+    }
 }
 
 plugins {
     id 'com.android.application' version '7.1.3' apply false
     id 'com.android.library' version '7.1.3' apply false
-    id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 }
 
 task clean(type: Delete) {
